--- a/BMFNMVVMTest/MainWindow.xaml
+++ b/BMFNMVVMTest/MainWindow.xaml
@@ -30,7 +30,9 @@
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    TextWrapping="Wrap" Margin="25,0,28,494" Width="739" Height="76" />
-        <ListBox x:Name="FoundedItemsListBox" ItemTemplateSelector="{StaticResource myDataTemplateSelector}" HorizontalAlignment="Left" Height="441" Margin="439,101,0,0" VerticalAlignment="Top" Width="313" ItemsSource="{Binding FoundedItems}"/>
+        <ListBox x:Name="FoundedItemsListBox" ItemTemplateSelector="{StaticResource myDataTemplateSelector}" Height="480" Margin="347,64,0,0" VerticalAlignment="Top" Width="417" ItemsSource="{Binding FoundedItems}" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Top"/>
+        <Button x:Name="SearchButton"  Content="Search..." HorizontalAlignment="Left" Height="40" Margin="25,504,0,0" VerticalAlignment="Top" Width="249" Click="SearchButton_Click"/>
+        <TextBox x:Name="SearchTextBox" HorizontalAlignment="Left" Height="25" Margin="25,474,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="249"/>
 
     </Grid>
 </Window>
