--- a/BMFNMVVMTest/MainWindow.xaml
+++ b/BMFNMVVMTest/MainWindow.xaml
@@ -33,6 +33,7 @@
         <ListBox x:Name="FoundedItemsListBox" ItemTemplateSelector="{StaticResource myDataTemplateSelector}" Height="480" Margin="347,64,0,0" VerticalAlignment="Top" Width="417" ItemsSource="{Binding FoundedItems}" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Top"/>
         <Button x:Name="SearchButton"  Content="Search..." HorizontalAlignment="Left" Height="40" Margin="25,504,0,0" VerticalAlignment="Top" Width="249" Click="SearchButton_Click"/>
         <TextBox x:Name="SearchTextBox" HorizontalAlignment="Left" Height="25" Margin="25,474,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="249"/>
+        <Button x:Name="AddButton" Content="Add new element..." HorizontalAlignment="Left" Height="43" Margin="25,395,0,0" VerticalAlignment="Top" Width="249" Click="AddButton_Click"/>
 
     </Grid>
 </Window>
