--- a/BMFNMVVMTest/MainWindow.xaml
+++ b/BMFNMVVMTest/MainWindow.xaml
@@ -7,8 +7,8 @@
         xmlns:parser="clr-namespace:BMFNMVVMTest.Parser"
         mc:Ignorable="d ignore"
         Height="600"
-        Width="800"
-        Title="MVVM Light Application"
+        Width="400"
+        Title="Repots list Application"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
 
     <Window.Resources>
@@ -21,19 +21,11 @@
         </ResourceDictionary>-->
     </Window.Resources>
 
-    <Grid x:Name="LayoutRoot">
-
-        <TextBlock FontSize="36"
-                   FontWeight="Bold"
-                   Foreground="Purple"
-                   Text="{Binding WelcomeTitle}"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   TextWrapping="Wrap" Margin="25,0,28,494" Width="739" Height="76" />
-        <ListBox x:Name="FoundedItemsListBox" ItemTemplateSelector="{StaticResource myDataTemplateSelector}" Height="480" Margin="347,55,0,0" VerticalAlignment="Top" Width="417" ItemsSource="{Binding FoundedItems}" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Top"/>
-        <Button x:Name="SearchButton"  Content="Search..." HorizontalAlignment="Left" Height="40" Margin="25,504,0,0" VerticalAlignment="Top" Width="249" Click="SearchButton_Click"/>
-        <TextBox x:Name="SearchTextBox" HorizontalAlignment="Left" Height="25" Margin="25,474,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="249"/>
-        <Button x:Name="AddButton" Content="Add new element..." HorizontalAlignment="Left" Height="43" Margin="25,395,0,0" VerticalAlignment="Top" Width="249" Click="AddButton_Click"/>
-
+    <Grid x:Name="LayoutRoot" Margin="0,0,-8,0">
+        <ListBox x:Name="FoundedItemsListBox" ItemTemplateSelector="{StaticResource myDataTemplateSelector}" ItemsSource="{Binding FoundedItems}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Top" Margin="0,42,10,40"/>
+        <Button x:Name="SearchButton"  Content="Search..." HorizontalAlignment="Right" Margin="0,0,10,10" Width="96" Click="SearchButton_Click" Height="25" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="SearchTextBox" Margin="10,0,111,10" TextWrapping="Wrap" Height="25" VerticalAlignment="Bottom"/>
+        <!--<Button x:Name="AddButton" Content="Add new report..." HorizontalAlignment="Left" Height="27" Margin="10,10,0,0" VerticalAlignment="Top" Width="131" Click="AddButton_Click"/>-->
+        <Button x:Name="AddButton" Content="Add new report..." HorizontalAlignment="Left" Height="27" Margin="10,10,0,0" VerticalAlignment="Top" Width="131" Command="{Binding AddWindowOpen, Mode=OneWay}" Click="AddButton_Click"/>
     </Grid>
 </Window>
