--- a/BMFNMVVMTest/MainWindow.xaml
+++ b/BMFNMVVMTest/MainWindow.xaml
@@ -23,9 +23,8 @@
 
     <Grid x:Name="LayoutRoot" Margin="0,0,-8,0">
         <ListBox x:Name="FoundedItemsListBox" ItemTemplateSelector="{StaticResource myDataTemplateSelector}" ItemsSource="{Binding FoundedItems}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Top" Margin="0,42,10,40"/>
-        <Button x:Name="SearchButton"  Content="Search..." HorizontalAlignment="Right" Margin="0,0,10,10" Width="96" Click="SearchButton_Click" Height="25" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="SearchTextBox" Margin="10,0,111,10" TextWrapping="Wrap" Height="25" VerticalAlignment="Bottom"/>
-        <!--<Button x:Name="AddButton" Content="Add new report..." HorizontalAlignment="Left" Height="27" Margin="10,10,0,0" VerticalAlignment="Top" Width="131" Click="AddButton_Click"/>-->
-        <Button x:Name="AddButton" Content="Add new report..." HorizontalAlignment="Left" Height="27" Margin="10,10,0,0" VerticalAlignment="Top" Width="131" Command="{Binding AddWindowOpen, Mode=OneWay}" Click="AddButton_Click"/>
+        <Button x:Name="SearchButton"  Content="Search..." HorizontalAlignment="Right" Margin="0,0,294,10" Width="96" Height="25" VerticalAlignment="Bottom" Command="{Binding StartSearch, Mode=OneWay}"/>
+        <TextBox x:Name="SearchTextBox" Margin="113,0,41,10" TextWrapping="Wrap" Height="25" VerticalAlignment="Bottom" Text="{Binding SearchString, Mode=TwoWay}"/>
+        <Button x:Name="AddButton" Content="Add new report..." HorizontalAlignment="Left" Height="25" Margin="10,10,0,0" VerticalAlignment="Top" Width="131" Command="{Binding AddWindowOpen, Mode=OneWay}"/>
     </Grid>
 </Window>
